@@ -1,11 +1,14 @@
 ---
 title: Java内存区域详解（重点）
+description: JVM内存区域详解：深入剖析Java运行时数据区（堆、方法区、虚拟机栈、本地方法栈、程序计数器）、对象创建过程、内存分配策略、对象访问定位方式。
 category: Java
 tag:
   - JVM
+head:
+  - - meta
+    - name: keywords
+      content: JVM内存区域,运行时数据区,堆内存,方法区,虚拟机栈,程序计数器,对象创建,Java内存模型
 ---
-
-<!-- @include: @small-advertisement.snippet.md -->
 
 > 如果没有特殊说明，都是针对的是 HotSpot 虚拟机。
 >
@@ -45,11 +48,49 @@ JDK 1.8 和之前的版本略有不同，我们这里以 JDK 1.7 和 JDK 1.8 这
 
 - 堆
 - 方法区
-- 直接内存 (非运行时数据区的一部分)
 
-Java 虚拟机规范对于运行时数据区域的规定是相当宽松的。以堆为例：堆可以是连续空间，也可以不连续。堆的大小可以固定，也可以在运行时按需扩展 。虚拟机实现者可以使用任何垃圾回收算法管理堆，甚至完全不进行垃圾收集也是可以的。
+直接内存经常与这些区域一起讨论，但它不是《Java 虚拟机规范》定义的运行时数据区，也不应被当作规范中的“线程共享运行时数据区”。
+
+Java 虚拟机规范对于运行时数据区域的规定是相当宽松的。以堆为例：堆可以是连续空间，也可以不连续。堆的大小可以固定，也可以在运行时按需扩展。虚拟机实现者可以使用任何垃圾回收算法管理堆，甚至完全不进行垃圾收集也是可以的。
 
 ### 程序计数器
+
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef feature fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef function fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef state fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef lifecycle fill:#E4C189,color:#333,rx:10,ry:10;
+    classDef warning fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(JVM 程序计数器):::main
+
+    %% 分支1：基本特性
+    Root --> Attr[核心特性]:::feature
+    Attr --> Attr1[线程私有/独立存储]:::feature
+    Attr --> Attr2[较小内存空间]:::feature
+
+    %% 分支2：核心功能
+    Root --> Func[主要功能]:::function
+    Func --> Func1[代码流程控制: 分支/循环/异常]:::function
+    Func --> Func2[线程恢复: 记录切换位置]:::function
+
+    %% 分支3：执行状态
+    Root --> Run[执行状态]:::state
+    Run --> Run1[Java方法: 记录字节码指令地址]:::state
+    Run --> Run2[Native方法: Undefined]:::state
+
+    %% 分支4：生命周期与异常
+    Root --> Life[生命周期与异常]:::lifecycle
+    Life --> Life1[随线程创建而创建/销毁]:::lifecycle
+    Life --> Life2[唯一不报 OutOfMemoryError 区域]:::warning
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
 
 程序计数器是一块较小的内存空间，可以看作是当前线程所执行的字节码的行号指示器。字节码解释器工作时通过改变这个计数器的值来选取下一条需要执行的字节码指令，分支、循环、跳转、异常处理、线程恢复等功能都需要依赖这个计数器来完成。
 
@@ -60,13 +101,50 @@ Java 虚拟机规范对于运行时数据区域的规定是相当宽松的。以
 - 字节码解释器通过改变程序计数器来依次读取指令，从而实现代码的流程控制，如：顺序执行、选择、循环、异常处理。
 - 在多线程的情况下，程序计数器用于记录当前线程执行的位置，从而当线程被切换回来的时候能够知道该线程上次运行到哪儿了。
 
-⚠️ 注意：程序计数器是唯一一个不会出现 `OutOfMemoryError` 的内存区域，它的生命周期随着线程的创建而创建，随着线程的结束而死亡。
+程序计数器的生命周期与线程完全同步：
+
+- **创建**：随着线程的创建而创建。
+- **销毁**：随着线程的结束而销毁。
+
+在执行 **Java 方法**（非 native）时，程序计数器记录的是 **当前正在执行的 JVM 字节码指令的地址**。当线程执行的是一个 **native 方法**（本地方法）时，程序计数器的值为 **Undefined（未定义）**，因为此时执行的不是 JVM 字节码指令。
+
+⚠️ 注意：程序计数器是 JVM 规范中唯一没有规定任何 `OutOfMemoryError` 情况的内存区域。规范只规定了这一结论，并未要求所有实现都采用某种固定大小的具体表示。
 
 ### Java 虚拟机栈
 
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(虚拟机栈<br/>Java Stack):::main
+
+    %% 分支1：定义与对比
+    Root --> Comp[基本特征]:::compare
+    Comp --> Comp1[线程私有，随线程创建/销毁]:::compare
+    Comp --> Comp2[服务对象: Java 方法]:::compare
+    Comp --> Comp3[栈帧先进后出]:::compare
+
+    %% 分支2：栈帧结构
+    Root --> Struct[栈帧结构]:::structure
+    Struct --> S1[局部变量表、操作数栈、动态链接、出口信息]:::structure
+
+    %% 分支3：异常情况
+    Root --> Err[异常情况]:::error
+    Err --> Err1[StackOverflowError: 栈深度溢出]:::error
+    Err --> Err2[OutOfMemoryError: 内存扩展失败]:::error
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
 与程序计数器一样，Java 虚拟机栈（后文简称栈）也是线程私有的，它的生命周期和线程相同，随着线程的创建而创建，随着线程的死亡而死亡。
 
-栈绝对算的上是 JVM 运行时数据区域的一个核心，除了一些 Native 方法调用是通过本地方法栈实现的(后面会提到)，其他所有的 Java 方法调用都是通过栈来实现的（也需要和其他运行时数据区域比如程序计数器配合）。
+栈绝对算的上是 JVM 运行时数据区域的一个核心，除了一些 Native 方法调用是通过本地方法栈实现的（后面会提到），其他所有的 Java 方法调用都是通过栈来实现的（也需要和其他运行时数据区域比如程序计数器配合）。
 
 方法调用的数据需要通过栈进行传递，每一次方法调用都会有一个对应的栈帧被压入栈中，每一个方法调用结束后，都会有一个栈帧被弹出。
 
@@ -80,40 +158,113 @@ Java 虚拟机规范对于运行时数据区域的规定是相当宽松的。以
 
 **操作数栈** 主要作为方法调用的中转站使用，用于存放方法执行过程中产生的中间计算结果。另外，计算过程中产生的临时变量也会放在操作数栈中。
 
-**动态链接** 主要服务一个方法需要调用其他方法的场景。Class 文件的常量池里保存有大量的符号引用比如方法引用的符号引用。当一个方法要调用其他方法，需要将常量池中指向方法的符号引用转化为其在内存地址中的直接引用。动态链接的作用就是为了将符号引用转换为调用方法的直接引用，这个过程也被称为 **动态连接** 。
+**动态链接**是栈帧的一项功能。每个栈帧都持有指向当前方法所属类型的运行时常量池的引用，用于把方法代码中的方法符号引用转换为具体的方法引用，并把变量访问转换为对应运行时存储结构中的偏移；解析尚未确定的符号时还可能触发类加载。需要根据接收者实际类型选择虚方法实现的过程属于方法调用指令的动态分派，不能简单等同于这里的动态链接。
 
 ![](https://oss.javaguide.cn/github/javaguide/jvmimage-20220331175738692.png)
 
-栈空间虽然不是无限的，但一般正常调用的情况下是不会出现问题的。不过，如果函数调用陷入无限循环的话，就会导致栈中被压入太多栈帧而占用太多空间，导致栈空间过深。那么当线程请求栈的深度超过当前 Java 虚拟机栈的最大深度的时候，就抛出 `StackOverFlowError` 错误。
+栈空间虽然不是无限的，但一般正常调用的情况下是不会出现问题的。不过，如果函数调用陷入无限递归的话，就会导致栈中被压入太多栈帧而占用太多空间，导致栈空间过深。那么当线程请求栈的深度超过当前 Java 虚拟机栈的最大深度的时候，就抛出 `StackOverflowError` 错误。
 
-Java 方法有两种返回方式，一种是 return 语句正常返回，一种是抛出异常。不管哪种返回方式，都会导致栈帧被弹出。也就是说， **栈帧随着方法调用而创建，随着方法结束而销毁。无论方法正常完成还是异常完成都算作方法结束。**
+**Java 方法有两种返回方式**：
 
-除了 `StackOverFlowError` 错误之外，栈还可能会出现`OutOfMemoryError`错误，这是因为如果栈的内存大小可以动态扩展， 那么当虚拟机在动态扩展栈时无法申请到足够的内存空间，则抛出`OutOfMemoryError`异常。
+- **正常返回**：执行 return 语句，返回值传递给调用者。
+- **异常返回**：方法执行过程中抛出异常且未被捕获。
+
+不管哪种返回方式，都会导致栈帧被弹出。也就是说， **栈帧随着方法调用而创建，随着方法结束而销毁。无论方法正常完成还是异常完成都算作方法结束。**
+
+除了 `StackOverflowError` 错误之外，栈还可能会出现 `OutOfMemoryError` 错误，这是因为如果栈的内存大小可以动态扩展， 那么当虚拟机在动态扩展栈时无法申请到足够的内存空间，则抛出 `OutOfMemoryError` 异常。
 
 简单总结一下程序运行中栈可能会出现两种错误：
 
-- **`StackOverFlowError`：** 如果栈的内存大小不允许动态扩展，那么当线程请求栈的深度超过当前 Java 虚拟机栈的最大深度的时候，就抛出 `StackOverFlowError` 错误。
-- **`OutOfMemoryError`：** 如果栈的内存大小可以动态扩展， 那么当虚拟机在动态扩展栈时无法申请到足够的内存空间，则抛出`OutOfMemoryError`异常。
+- **`StackOverflowError`：** 当线程执行所需的栈空间超过 JVM 允许的大小时，抛出 `StackOverflowError` 错误。
+- **`OutOfMemoryError`：** 如果栈的内存大小可以动态扩展， 那么当虚拟机在动态扩展栈时无法申请到足够的内存空间，则抛出 `OutOfMemoryError` 异常。
 
 ![](https://oss.javaguide.cn/github/javaguide/java/jvm/%E3%80%8A%E6%B7%B1%E5%85%A5%E7%90%86%E8%A7%A3%E8%99%9A%E6%8B%9F%E6%9C%BA%E3%80%8B%E7%AC%AC%E4%B8%89%E7%89%88%E7%9A%84%E7%AC%AC2%E7%AB%A0-%E8%99%9A%E6%8B%9F%E6%9C%BA%E6%A0%88.png)
 
 ### 本地方法栈
 
-和虚拟机栈所发挥的作用非常相似，区别是：**虚拟机栈为虚拟机执行 Java 方法 （也就是字节码）服务，而本地方法栈则为虚拟机使用到的 Native 方法服务。** 在 HotSpot 虚拟机中和 Java 虚拟机栈合二为一。
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef implement fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
 
-本地方法被执行的时候，在本地方法栈也会创建一个栈帧，用于存放该本地方法的局部变量表、操作数栈、动态链接、出口信息。
+    %% 核心节点
+    Root(本地方法栈):::main
 
-方法执行完毕后相应的栈帧也会出栈并释放内存空间，也会出现 `StackOverFlowError` 和 `OutOfMemoryError` 两种错误。
+    %% 分支1：定义与对比
+    Root --> Comp[定义与对比]:::compare
+    Comp --> Comp1[作用与虚拟机栈相似]:::compare
+    Comp --> Comp2[服务对象: Native 方法]:::compare
+
+    %% 分支2：HotSpot 实现
+    Root --> Imp[虚拟机实现]:::implement
+    Imp --> Imp1[HotSpot 与虚拟机栈合二为一]:::implement
+
+    %% 分支3：栈帧结构
+    Root --> Struct[栈帧内容]:::structure
+    Struct --> S1[局部变量表、操作数栈、动态链接]:::structure
+
+    %% 分支4：异常情况
+    Root --> Err[异常与内存]:::error
+    Err --> Err1[StackOverflowError: 栈深度溢出]:::error
+    Err --> Err2[OutOfMemoryError: 内存扩展失败]:::error
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
+和虚拟机栈所发挥的作用非常相似，区别是：**虚拟机栈为虚拟机执行 Java 方法（也就是字节码）服务，而本地方法栈则为虚拟机使用到的 Native 方法服务。** 在 HotSpot 虚拟机中和 Java 虚拟机栈合二为一。
+
+执行本地方法时，虚拟机实现可以使用传统的本地栈（通常称为 C 栈）。《Java 虚拟机规范》没有规定本地方法栈必须采用与 JVM 栈帧相同的局部变量表、操作数栈和动态链接结构。
+
+本地方法执行完毕后，相应的实现相关栈数据会被释放。本地方法栈也可能出现 `StackOverflowError` 和 `OutOfMemoryError` 两种错误。
 
 ### 堆
 
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef implement fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(Java 堆):::main
+
+    %% 分支1：基本定义与地位
+    Root --> Def[定义与地位]:::compare
+    Def --> Def1[JVM 内存中最大区域]:::compare
+    Def --> Def2[所有线程共享]:::compare
+    Def --> Def3[虚拟机启动时创建，生命周期长]:::compare
+
+    %% 分支2：核心用途
+    Root --> Use[核心用途]:::structure
+    Use --> Use1[存放对象实例（非静态字段）]:::structure
+    Use --> Use2[存放数组数据]:::structure
+    Use --> Use3[对象内存统一管理]:::structure
+
+    %% 分3：分代结构 (GC 堆)
+    Root --> GC[分代结构]:::implement
+    GC --> GC1[新生代：Eden 区 + 两个 Survivor 区]:::implement
+    GC --> GC2[老年代：Old Generation]:::implement
+    GC --> GC3[目的：优化垃圾回收效率]:::implement
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
 Java 虚拟机所管理的内存中最大的一块，Java 堆是所有线程共享的一块内存区域，在虚拟机启动时创建。**此内存区域的唯一目的就是存放对象实例，几乎所有的对象实例以及数组都在这里分配内存。**
 
-Java 世界中“几乎”所有的对象都在堆中分配，但是，随着 JIT 编译器的发展与逃逸分析技术逐渐成熟，栈上分配、标量替换优化技术将会导致一些微妙的变化，所有的对象都分配到堆上也渐渐变得不那么“绝对”了。从 JDK 1.7 开始已经默认开启逃逸分析，如果某些方法中的对象引用没有被返回或者未被外面使用（也就是未逃逸出去），那么对象可以直接在栈上分配内存。
+Java 世界中“几乎”所有的对象都在堆中分配。不过，JIT 编译器可以基于逃逸分析进行标量替换，从而消除部分对象的实际分配。HotSpot 的这类优化不能简单表述为“对象直接在 Java 虚拟机栈上分配”。
 
 Java 堆是垃圾收集器管理的主要区域，因此也被称作 **GC 堆（Garbage Collected Heap）**。从垃圾回收的角度，由于现在收集器基本都采用分代垃圾收集算法，所以 Java 堆还可以细分为：新生代和老年代；再细致一点有：Eden、Survivor、Old 等空间。进一步划分的目的是更好地回收内存，或者更快地分配内存。
 
-在 JDK 7 版本及 JDK 7 版本之前，堆内存被通常分为下面三部分：
+在 JDK 7 及更早版本的 HotSpot 中，GC 通常按下面三部分介绍，其中永久代是方法区的实现，并不属于 Java 堆：
 
 1. 新生代内存(Young Generation)
 2. 老生代(Old Generation)
@@ -123,9 +274,9 @@ Java 堆是垃圾收集器管理的主要区域，因此也被称作 **GC 堆（
 
 ![堆内存结构](https://oss.javaguide.cn/github/javaguide/java/jvm/hotspot-heap-structure.png)
 
-**JDK 8 版本之后 PermGen(永久代) 已被 Metaspace(元空间) 取代，元空间使用的是本地内存。** （我会在方法区这部分内容详细介绍到）。
+**JDK 8 版本之后 PermGen（永久代） 已被 Metaspace（元空间） 取代，元空间使用的是本地内存。**（我会在方法区这部分内容详细介绍到）。
 
-大部分情况，对象都会首先在 Eden 区域分配，在一次新生代垃圾回收后，如果对象还存活，则会进入 S0 或者 S1，并且对象的年龄还会加 1(Eden 区->Survivor 区后对象的初始年龄变为 1)，当它的年龄增加到一定程度（默认为 15 岁），就会被晋升到老年代中。对象晋升到老年代的年龄阈值，可以通过参数 `-XX:MaxTenuringThreshold` 来设置。不过，设置的值应该在 0-15，否则会爆出以下错误：
+大部分情况，对象都会首先在 Eden 区域分配，在一次新生代垃圾回收后，如果对象还存活，则会进入 S0 或者 S1，并且对象的年龄还会加 1（Eden 区->Survivor 区后对象的初始年龄变为 1）。对象达到晋升年龄阈值后会进入老年代，该阈值受收集器、自适应策略和 `-XX:MaxTenuringThreshold` 参数共同影响，并非所有收集器的默认值都是 15。对于采用 4 位年龄字段的经典分代收集器，该参数的上限是 15。
 
 ```bash
 MaxTenuringThreshold of 20 is invalid; must be between 0 and 15
@@ -139,7 +290,7 @@ MaxTenuringThreshold of 20 is invalid; must be between 0 and 15
 
 在 HotSpot 虚拟机中，对象在内存中存储的布局可以分为 3 块区域：对象头（Header）、实例数据（Instance Data）和对齐填充（Padding）。其中，对象头包括两部分：标记字段（Mark Word）和类型指针（Klass Word）。关于对象内存布局的详细介绍，后文会介绍到，这里就不重复提了。
 
-这个年龄信息就是在标记字段中存放的（标记字段还存放了对象自身的其他信息比如哈希码、锁状态信息等等）。`markOop.hpp`定义了标记字（mark word）的结构：
+这个年龄信息就是在标记字段中存放的（标记字段还存放了对象自身的其他信息比如哈希码、锁状态信息等等）。下面旧版 HotSpot 源码中的 `markOop.hpp` 展示了当时标记字（Mark Word）的结构；现代 JDK 的对应实现和对象头布局已经发生变化：
 
 ![标记字段结构](https://oss.javaguide.cn/github/javaguide/java/jvm/hotspot-markOop.hpp..png)
 
@@ -168,16 +319,62 @@ MaxTenuringThreshold of 20 is invalid; must be between 0 and 15
 堆这里最容易出现的就是 `OutOfMemoryError` 错误，并且出现这种错误之后的表现形式还会有几种，比如：
 
 1. **`java.lang.OutOfMemoryError: GC Overhead Limit Exceeded`**：当 JVM 花太多时间执行垃圾回收并且只能回收很少的堆空间时，就会发生此错误。
-2. **`java.lang.OutOfMemoryError: Java heap space`** :假如在创建新的对象时, 堆内存中的空间不足以存放新创建的对象, 就会引发此错误。(和配置的最大堆内存有关，且受制于物理内存大小。最大堆内存可通过`-Xmx`参数配置，若没有特别配置，将会使用默认值，详见：[Default Java 8 max heap size](https://stackoverflow.com/questions/28272923/default-xmxsize-in-java-8-max-heap-size))
+2. **`java.lang.OutOfMemoryError: Java heap space`** :假如在创建新的对象时, 堆内存中的空间不足以存放新创建的对象, 就会引发此错误。(和配置的最大堆内存有关，且受制于物理内存大小。最大堆内存可通过 `-Xmx` 参数配置，若没有特别配置，将会使用默认值，详见：[Default Java 8 max heap size](https://stackoverflow.com/questions/28272923/default-xmxsize-in-java-8-max-heap-size))
 3. ……
 
 ### 方法区
+
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef implement fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(方法区):::main
+
+    %% 分支1：基本定义与地位
+    Root --> Def[定义与地位]:::compare
+    Def --> Def1[线程共享的内存区域]:::compare
+    Def --> Def2[JVM 规范定义的逻辑区域]:::compare
+    Def --> Def3[具体实现随虚拟机而异]:::compare
+
+    %% 分支2：核心存储内容
+    Root --> Store[核心存储内容]:::structure
+    Store --> Store1[类的元数据: 结构/字段/方法信息]:::structure
+    Store --> Store2[方法的字节码: 原始指令序列]:::structure
+    Store --> Store3[运行时常量池: 字面量与符号引用]:::structure
+
+    %% 分支3：HotSpot 位置演变 (JDK 7+)
+    Root --> Change[位置演变与例外]:::implement
+    Change --> Change1[静态变量: 移至 Java 堆（JDK 7）]:::implement
+    Change --> Change2[字符串常量池: 移至 Java 堆（JDK 7）]:::implement
+    Change --> Change3[JIT 代码缓存: 独立 Code Cache 区域]:::implement
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
 
 方法区属于是 JVM 运行时数据区域的一块逻辑区域，是各个线程共享的内存区域。
 
 《Java 虚拟机规范》只是规定了有方法区这么个概念和它的作用，方法区到底要如何实现那就是虚拟机自己要考虑的事情了。也就是说，在不同的虚拟机实现上，方法区的实现是不同的。
 
-当虚拟机要使用一个类时，它需要读取并解析 Class 文件获取相关信息，再将信息存入到方法区。方法区会存储已被虚拟机加载的 **类信息、字段信息、方法信息、常量、静态变量、即时编译器编译后的代码缓存等数据**。
+当虚拟机加载一个类时，它会从 Class 文件中解析出相应的信息，并将这些**元数据**存入方法区。具体来说，方法区主要存储以下核心数据：
+
+1. **类的元数据**：包括类的完整结构，如类名、父类、实现的接口、访问修饰符，以及字段和方法的详细信息（名称、类型、修饰符等）。
+2. **方法的字节码**：每个方法的原始指令序列。
+3. **运行时常量池**：每个类独有的，由 Class 文件中的常量池转换而来，用于存放编译期生成的各种字面量和对类型、字段、方法的符号引用。
+
+需要特别注意的是，以下几类数据虽然在逻辑上与类相关，但在 HotSpot 虚拟机中，它们并不存储在方法区内：
+
+- **静态变量（Static Variables）**：自 JDK 7 起，类静态变量与对应的 `java.lang.Class` 对象一起存放在 Java 堆中。
+- **字符串常量池（String Pool）**：同样自 JDK 7 起，字符串常量池也**移至 Java 堆中**。
+- **即时编译器编译后的代码缓存（JIT Code Cache）**：JIT 编译器将热点方法的字节码编译成的本地机器码，存放在一个**独立的、名为“Code Cache”的内存区域**，而不是方法区本身。这样做是为了实现更高效的执行和内存管理。
+
+![method-area-jdk1.7](https://oss.javaguide.cn/github/javaguide/java/jvm/method-area-jdk1.7.png)
 
 **方法区和永久代以及元空间是什么关系呢？** 方法区和永久代以及元空间的关系很像 Java 中接口和类的关系，类实现了接口，这里的类就可以看作是永久代和元空间，接口可以看作是方法区，也就是说永久代以及元空间是 HotSpot 虚拟机对虚拟机规范中方法区的两种实现方式。并且，永久代是 JDK 1.8 之前的方法区实现，JDK 1.8 及以后方法区的实现变成了元空间。
 
@@ -189,11 +386,11 @@ MaxTenuringThreshold of 20 is invalid; must be between 0 and 15
 
 ![](https://oss.javaguide.cn/github/javaguide/java/jvm/20210425134508117.png)
 
-1、整个永久代有一个 JVM 本身设置的固定大小上限，无法进行调整（也就是受到 JVM 内存的限制），而元空间使用的是本地内存，受本机可用内存的限制，虽然元空间仍旧可能溢出，但是比原来出现的几率会更小。
+1、永久代的容量受 `-XX:MaxPermSize` 上限约束，这个上限可以配置；元空间改用本地内存，并可通过 `-XX:MaxMetaspaceSize` 限制。两者都可能溢出，实际风险取决于配置和类元数据的增长情况。
 
-> 当元空间溢出时会得到如下错误：`java.lang.OutOfMemoryError: MetaSpace`
+> 当元空间溢出时会得到如下错误：`java.lang.OutOfMemoryError: Metaspace`
 
-你可以使用 `-XX：MaxMetaspaceSize` 标志设置最大元空间大小，默认值为 unlimited，这意味着它只受系统内存的限制。`-XX：MetaspaceSize` 调整标志定义元空间的初始大小如果未指定此标志，则 Metaspace 将根据运行时的应用程序需求动态地重新调整大小。
+你可以使用 `-XX:MaxMetaspaceSize` 设置最大元空间大小。若不设置，类元数据空间可继续增长，直到受到可用本地内存等条件限制。`-XX:MetaspaceSize` 不是元空间的初始容量，而是触发元数据 GC 的初始高水位阈值，之后 JVM 会动态调整该阈值。
 
 2、元空间里面存放的是类的元数据，这样加载多少类的元数据就不由 `MaxPermSize` 控制了, 而由系统的实际可用空间来控制，这样能加载的类就更多了。
 
@@ -215,15 +412,46 @@ JDK 1.8 之前永久代还没被彻底移除的时候通常通过下面这些参
 JDK 1.8 的时候，方法区（HotSpot 的永久代）被彻底移除了（JDK1.7 就已经开始了），取而代之是元空间，元空间使用的是本地内存。下面是一些常用参数：
 
 ```java
--XX:MetaspaceSize=N //设置 Metaspace 的初始（和最小大小）
+-XX:MetaspaceSize=N //设置触发元数据 GC 的初始高水位阈值
 -XX:MaxMetaspaceSize=N //设置 Metaspace 的最大大小
 ```
 
-与永久代很大的不同就是，如果不指定大小的话，随着更多类的创建，虚拟机会耗尽所有可用的系统内存。
+与永久代很大的不同是，如果不指定 `MaxMetaspaceSize`，元空间没有由该参数设定的固定上限，持续的类元数据增长可能消耗大量本地内存。
 
 ### 运行时常量池
 
-Class 文件中除了有类的版本、字段、方法、接口等描述信息外，还有用于存放编译期生成的各种字面量（Literal）和符号引用（Symbolic Reference）的 **常量池表(Constant Pool Table)** 。
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef implement fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(运行时常量池):::main
+
+    %% 分支1：来源与地位
+    Root --> Source[定义与地位]:::compare
+    Source --> Source1[源自 Class 文件的常量池表]:::compare
+    Source --> Source2[类加载后存入方法区]:::compare
+    Source --> Source3[功能类似于高级符号表]:::compare
+
+    %% 分支2：存储内容分类
+    Root --> Content[存储内容]:::structure
+    Content --> Content1[字面量: 文本字符串/常量值等]:::structure
+    Content --> Content2[符号引用: 类/字段/方法的描述]:::structure
+
+    %% 分支3：异常处理
+    Root --> Error[异常情况]:::error
+    Error --> Error2[无法申请内存时抛出 OutOfMemoryError]:::error
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
+Class 文件中除了有类的版本、字段、方法、接口等描述信息外，还有用于存放编译期生成的各种字面量（Literal）和符号引用（Symbolic Reference）的 **常量池表(Constant Pool Table)**。
 
 字面量是源代码中的固定值的表示法，即通过字面我们就能知道其值的含义。字面量包括整数、浮点数和字符串字面量。常见的符号引用包括类符号引用、字段符号引用、方法符号引用、接口方法符号。
 
@@ -239,20 +467,54 @@ Class 文件中除了有类的版本、字段、方法、接口等描述信息�
 
 ### 字符串常量池
 
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef implement fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(字符串常量池):::main
+
+    %% 分支1：内存位置演进
+    Root --> History[内存位置演进]:::compare
+    History --> Hist1[JDK 1.6: 存在于永久代 PermGen]:::compare
+    History --> Hist2[JDK 1.7+: 移至堆 Heap 中]:::compare
+    History --> Hist3[目的: 避免永久代 OOM 且方便 GC]:::compare
+
+    %% 分支2：底层实现结构
+    Root --> Impl[底层实现机制]:::structure
+    Impl --> Impl1[现代 HotSpot: ConcurrentHashTable]:::structure
+    Impl --> Impl2[通过弱句柄保存字符串对象]:::structure
+    Impl --> Impl3[支持扩容、重哈希与清理]:::structure
+
+    %% 分支3：风险与调优
+    Root --> Tuning[风险与调优]:::error
+    Tuning --> Risk1[StringTable 过小导致 Hash 冲突严重]:::error
+    Tuning --> Risk2[大量 intern 导致性能下降]:::error
+    Tuning --> Param[-XX:StringTableSize 调优参数]:::error
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
 **字符串常量池** 是 JVM 为了提升性能和减少内存消耗针对字符串（String 类）专门开辟的一块区域，主要目的是为了避免字符串的重复创建。
 
 ```java
-// 在字符串常量池中创建字符串对象 ”ab“
-// 将字符串对象 ”ab“ 的引用赋值给给 aa
+// 1.在字符串常量池中查询字符串对象 "ab"，如果没有则创建"ab"并放入字符串常量池
+// 2.将字符串对象 "ab" 的引用赋值给 aa
 String aa = "ab";
-// 直接返回字符串常量池中字符串对象 ”ab“，赋值给引用 bb
+// 直接返回字符串常量池中字符串对象 "ab"，赋值给引用 bb
 String bb = "ab";
 System.out.println(aa==bb); // true
 ```
 
-HotSpot 虚拟机中字符串常量池的实现是 `src/hotspot/share/classfile/stringTable.cpp` ,`StringTable` 可以简单理解为一个固定大小的`HashTable` ，容量为 `StringTableSize`（可以通过 `-XX:StringTableSize` 参数来设置），保存的是字符串（key）和 字符串对象的引用（value）的映射关系，字符串对象的引用指向堆中的字符串对象。
+HotSpot 虚拟机中字符串常量池的实现可以在 `src/hotspot/share/classfile/stringTable.cpp` 中看到。现代 HotSpot 的本地 `StringTable` 使用并发哈希表，并通过弱句柄保存堆中的字符串对象，支持扩容、重哈希以及清理失效条目；`-XX:StringTableSize` 用于设置初始桶数量。因此，“固定长度数组 + 链表”的说法只适用于部分旧版实现，不能用于概括当前 HotSpot。
 
-JDK1.7 之前，字符串常量池存放在永久代。JDK1.7 字符串常量池和静态变量从永久代移动到了 Java 堆中。
+JDK1.7 之前，字符串常量池存放在永久代。JDK1.7 将字符串常量池和类静态变量移到了 Java 堆中。
 
 ![method-area-jdk1.6](https://oss.javaguide.cn/github/javaguide/java/jvm/method-area-jdk1.6.png)
 
@@ -270,17 +532,51 @@ JDK1.7 之前，字符串常量池存放在永久代。JDK1.7 字符串常量池
 
 ### 直接内存
 
-直接内存是一种特殊的内存缓冲区，并不在 Java 堆或方法区中分配的，而是通过 JNI 的方式在本地内存上分配的。
+```mermaid
+graph LR
+    %% 颜色定义
+    classDef main fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef compare fill:#00838F,color:#fff,rx:10,ry:10;
+    classDef structure fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef implement fill:#E99151,color:#fff,rx:10,ry:10;
+    classDef error fill:#C44545,color:#fff,rx:10,ry:10;
+
+    %% 核心节点
+    Root(直接内存):::main
+
+    %% 分支1：定义与地位
+    Root --> Source[定义与地位]:::compare
+    Source --> Source1[非运行时数据区的一部分]:::compare
+    Source --> Source2[非 JVM 规范定义的内存区域]:::compare
+    Source --> Source3[在本地内存分配]:::compare
+
+    %% 分支2：核心优势
+    Root --> Advantage[核心优势]:::implement
+    Advantage --> Adv1[某些 I/O 场景可减少中间复制]:::implement
+    Advantage --> Adv2[部分场景可提高 I/O 性能]:::implement
+    Advantage --> Adv3[减少垃圾回收对应用的影响]:::implement
+
+    %% 分支3：限制与异常
+    Root --> Error[限制与异常]:::error
+    Error --> Error1[不计入 Java 堆]:::error
+    Error --> Error2[受直接内存上限及本机内存限制]:::error
+    Error --> Error3[内存不足时抛出 OutOfMemoryError]:::error
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
+直接内存是一种特殊的内存缓冲区，并不在 Java 堆或方法区中分配，而是在本地内存中分配。具体分配机制属于虚拟机实现细节，并不等同于必须通过 JNI 分配。
 
 直接内存并不是虚拟机运行时数据区的一部分，也不是虚拟机规范中定义的内存区域，但是这部分内存也被频繁地使用。而且也可能导致 `OutOfMemoryError` 错误出现。
 
-JDK1.4 中新加入的 **NIO（Non-Blocking I/O，也被称为 New I/O）**，引入了一种基于**通道（Channel）**与**缓存区（Buffer）**的 I/O 方式，它可以直接使用 Native 函数库直接分配堆外内存，然后通过一个存储在 Java 堆中的 DirectByteBuffer 对象作为这块内存的引用进行操作。这样就能在一些场景中显著提高性能，因为**避免了在 Java 堆和 Native 堆之间来回复制数据**。
+JDK1.4 中新加入的 **NIO（New I/O）**，引入了一种基于**通道（Channel）**与**缓冲区（Buffer）**的 I/O 方式。直接字节缓冲区可以在 Java 堆外分配内容，并通过 Java 堆中的 `DirectByteBuffer` 对象进行操作。JVM 会尽力直接在这种缓冲区上执行本地 I/O，从而在某些场景中减少中间缓冲区的数据复制；NIO 中只有可选择通道与 Selector 等部分提供非阻塞 I/O 能力，不能把整个 NIO 展开为 Non-Blocking I/O。
 
-直接内存的分配不会受到 Java 堆的限制，但是，既然是内存就会受到本机总内存大小以及处理器寻址空间的限制。
+直接内存不计入 Java 堆，但仍会受到本机总内存、处理器寻址空间等条件的限制。对于 NIO 直接缓冲区，还可以通过 [`-XX:MaxDirectMemorySize`](https://docs.oracle.com/en/java/javase/25/docs/specs/man/java.html#extra-options-for-java) 限制总分配量。
 
-类似的概念还有 **堆外内存** 。在一些文章中将直接内存等价于堆外内存，个人觉得不是特别准确。
+类似的概念还有 **堆外内存**。在一些文章中将直接内存等价于堆外内存，个人觉得不是特别准确。
 
-堆外内存就是把内存对象分配在堆外的内存，这些内存直接受操作系统管理（而不是虚拟机），这样做的结果就是能够在一定程度上减少垃圾回收对应用程序造成的影响。
+堆外内存是分配在 Java 堆之外的内存的统称，底层通常使用操作系统提供的本地内存。它是否以及如何受到 JVM 或 JDK 管理，取决于具体的分配方式。例如，在 OpenJDK/HotSpot 中，`DirectByteBuffer` 对应的本地内存会关联 Java 堆中的缓冲区对象，并在对象变为不可达后通过 `Cleaner` 等机制参与清理。由于清理时机不由应用程序直接控制，使用堆外内存可以减少 Java 堆的压力，但仍然需要关注本地内存泄漏和 `OutOfMemoryError`。
 
 ## HotSpot 虚拟机对象探秘
 
@@ -290,6 +586,45 @@ JDK1.4 中新加入的 **NIO（Non-Blocking I/O，也被称为 New I/O）**，�
 
 Java 对象的创建过程我建议最好是能默写出来，并且要掌握每一步在做什么。
 
+```mermaid
+graph TD
+    %% 颜色定义
+    classDef root fill:#004D61,color:#fff,rx:10,ry:10;
+    classDef step fill:#005D7B,color:#fff,rx:10,ry:10;
+    classDef detail fill:#4CA497,color:#fff,rx:10,ry:10;
+    classDef logic fill:#E99151,color:#fff,rx:10,ry:10;
+
+    %% 核心流程
+    Start(new 指令触发):::root
+
+    Start --> S1[Step 1: 类加载检查]:::step
+    S1 --> S1_1[检查常量池是否有类符号引用]:::detail
+    S1_1 --> S1_2[检查类是否已加载/解析/初始化]:::detail
+
+    S1_2 --> S2[Step 2: 分配内存]:::step
+    S2 --> S2_Method{分配方式}:::logic
+    S2_Method -->|堆内存规整| S2_A[指针碰撞]:::logic
+    S2_Method -->|堆内存交错| S2_B[空闲列表]:::logic
+    S2_A & S2_B --> S2_Safe[并发安全: TLAB 或 CAS 重试]:::detail
+
+    S2_Safe --> S3[Step 3: 初始化零值]:::step
+    S3 --> S3_1[将分配到的内存空间初始化为 0]:::detail
+    S3_1 --> S3_2[保证实例字段不赋初值即可直接使用]:::detail
+
+    S3_2 --> S4[Step 4: 设置对象头]:::step
+    S4 --> S4_1[Mark Word: 哈希码/GC分代年龄/锁状态]:::detail
+    S4_1 --> S4_2[Klass Pointer: 元数据指针指向类]:::detail
+
+    S4_2 --> S5[Step 5: 执行 init 方法]:::step
+    S5 --> S5_1[按照程序员意愿进行初始化]:::detail
+    S5_1 --> S5_2[执行构造方法]:::detail
+
+    S5_2 --> End((对象创建完成)):::root
+
+    %% 线条样式
+    linkStyle default stroke:#005D7B,stroke-width:1.5px,opacity:0.8
+```
+
 #### Step1:类加载检查
 
 虚拟机遇到一条 new 指令时，首先将去检查这个指令的参数是否能在常量池中定位到这个类的符号引用，并且检查这个符号引用代表的类是否已被加载过、解析和初始化过。如果没有，那必须先执行相应的类加载过程。
@@ -298,7 +633,7 @@ Java 对象的创建过程我建议最好是能默写出来，并且要掌握每
 
 在**类加载检查**通过后，接下来虚拟机将为新生对象**分配内存**。对象所需的内存大小在类加载完成后便可确定，为对象分配空间的任务等同于把一块确定大小的内存从 Java 堆中划分出来。**分配方式**有 **“指针碰撞”** 和 **“空闲列表”** 两种，**选择哪种分配方式由 Java 堆是否规整决定，而 Java 堆是否规整又由所采用的垃圾收集器是否带有压缩整理功能决定**。
 
-**内存分配的两种方式** （补充内容，需要掌握）：
+**内存分配的两种方式**（补充内容，需要掌握）：
 
 - 指针碰撞：
   - 适用场合：堆内存规整（即没有内存碎片）的情况下。
@@ -309,7 +644,7 @@ Java 对象的创建过程我建议最好是能默写出来，并且要掌握每
   - 原理：虚拟机会维护一个列表，该列表中会记录哪些内存块是可用的，在分配的时候，找一块儿足够大的内存块儿来划分给对象实例，最后更新列表记录。
   - 使用该分配方式的 GC 收集器：CMS
 
-选择以上两种方式中的哪一种，取决于 Java 堆内存是否规整。而 Java 堆内存是否规整，取决于 GC 收集器的算法是"标记-清除"，还是"标记-整理"（也称作"标记-压缩"），值得注意的是，复制算法内存也是规整的。
+选择以上两种方式中的哪一种，取决于 Java 堆内存是否规整。而 Java 堆内存是否规整，取决于 GC 收集器的算法是“标记-清除”，还是“标记-整理”（也称作“标记-压缩”），值得注意的是，复制算法内存也是规整的。
 
 **内存分配并发问题（补充内容，需要掌握）**
 
@@ -324,7 +659,7 @@ Java 对象的创建过程我建议最好是能默写出来，并且要掌握每
 
 #### Step4:设置对象头
 
-初始化零值完成之后，**虚拟机要对对象进行必要的设置**，例如这个对象是哪个类的实例、如何才能找到类的元数据信息、对象的哈希码、对象的 GC 分代年龄等信息。 **这些信息存放在对象头中。** 另外，根据虚拟机当前运行状态的不同，如是否启用偏向锁等，对象头会有不同的设置方式。
+初始化零值完成之后，**虚拟机要对对象进行必要的设置**，例如这个对象是哪个类的实例、如何才能找到类的元数据信息、对象的哈希码、对象的 GC 分代年龄等信息。 **这些信息存放在对象头中。** 另外，对象头的具体布局与 JDK 版本和虚拟机配置有关；例如偏向锁在 JDK 15 起默认禁用，相关实现后来又被移除。
 
 #### Step5:执行 init 方法
 
@@ -336,12 +671,12 @@ Java 对象的创建过程我建议最好是能默写出来，并且要掌握每
 
 对象头包括两部分信息：
 
-1. 标记字段（Mark Word）：用于存储对象自身的运行时数据， 如哈希码（HashCode）、GC 分代年龄、锁状态标志、线程持有的锁、偏向线程 ID、偏向时间戳等等。
+1. 标记字段（Mark Word）：用于存储对象自身的运行时数据，如哈希码（HashCode）、GC 分代年龄、锁状态等；偏向线程 ID、偏向时间戳只适用于仍实现并启用偏向锁的旧版 HotSpot。
 2. 类型指针（Klass pointer）：对象指向它的类元数据的指针，虚拟机通过这个指针来确定这个对象是哪个类的实例。
 
 **实例数据部分是对象真正存储的有效信息**，也是在程序中所定义的各种类型的字段内容。
 
-**对齐填充部分不是必然存在的，也没有什么特别的含义，仅仅起占位作用。** 因为 Hotspot 虚拟机的自动内存管理系统要求对象起始地址必须是 8 字节的整数倍，换句话说就是对象的大小必须是 8 字节的整数倍。而对象头部分正好是 8 字节的倍数（1 倍或 2 倍），因此，当对象实例数据部分没有对齐时，就需要通过对齐填充来补全。
+**对齐填充部分不是必然存在的，也没有什么特别的含义，仅仅起占位作用。** HotSpot 会按对象对齐边界分配对象，默认对齐通常是 8 字节，也可受 `-XX:ObjectAlignmentInBytes` 等配置影响。因此对象总大小需要补齐到对齐边界；对象头本身并不保证总是 8 字节的整数倍，例如启用压缩类指针时常见的对象头大小是 12 字节。
 
 ### 对象的访问定位
 
@@ -369,10 +704,8 @@ HotSpot 虚拟机主要使用的就是这种方式来进行对象访问。
 - 《自己动手写 Java 虚拟机》
 - Chapter 2. The Structure of the Java Virtual Machine：<https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-2.html>
 - JVM 栈帧内部结构-动态链接：<https://chenxitag.com/archives/368>
-- Java 中 new String("字面量") 中 "字面量" 是何时进入字符串常量池的? - 木女孩的回答 - 知乎：<https://www.zhihu.com/question/55994121/answer/147296098>
+- Java 中 new String（“字面量”） 中 “字面量” 是何时进入字符串常量池的？ - 木女孩的回答 - 知乎：<https://www.zhihu.com/question/55994121/answer/147296098>
 - JVM 常量池中存储的是对象还是引用呢？ - RednaxelaFX 的回答 - 知乎：<https://www.zhihu.com/question/57109429/answer/151717241>
 - <http://www.pointsoftware.ch/en/under-the-hood-runtime-data-areas-javas-memory-model/>
 - <https://dzone.com/articles/jvm-permgen-%E2%80%93-where-art-thou>
 - <https://stackoverflow.com/questions/9095748/method-area-and-permgen>
-
-<!-- @include: @article-footer.snippet.md -->
